[gd_scene load_steps=8 format=3 uid="uid://cp0ft4iqo4ssj"]

[ext_resource type="Script" path="res://common/scene_turret/turret.gd" id="1_o8x7h"]
[ext_resource type="PackedScene" uid="uid://drwjhnmenrsgk" path="res://common/scene_bullet/scene_bullet.tscn" id="2_7isud"]
[ext_resource type="PackedScene" uid="uid://b4bm7eemt6ovl" path="res://common/sfx_lazer_shoot/lazer_shoot_sfx.tscn" id="4_x45mm"]
[ext_resource type="SpriteFrames" uid="uid://cxl8ogm3m600b" path="res://common/scene_turret/turret_sprite_frames.tres" id="4_yvdvy"]
[ext_resource type="PackedScene" uid="uid://dcy1gpvgus6ku" path="res://common/sfx_explosion/explosion_sfx.tscn" id="5_ihx8v"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8edsw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bevfx"]
radius = 500.0

[node name="Turret" type="StaticBody2D" groups=["turrets"]]
collision_layer = 4
collision_mask = 16
script = ExtResource("1_o8x7h")
bullet_scene = ExtResource("2_7isud")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = -1.57079
sprite_frames = ExtResource("4_yvdvy")
animation = &"full_ammo"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2.16, 1.36)
shape = SubResource("CapsuleShape2D_8edsw")

[node name="BulletSpawnPoint" type="Marker2D" parent="."]
position = Vector2(25, 0)

[node name="ShootingTimer" type="Timer" parent="."]

[node name="EnemyScanArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyScanArea"]
shape = SubResource("CircleShape2D_bevfx")

[node name="LazerShootSfx" parent="." instance=ExtResource("4_x45mm")]

[node name="ExplosionSfx" parent="." instance=ExtResource("5_ihx8v")]

[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
[connection signal="finished" from="ExplosionSfx" to="." method="_on_explosion_sfx_finished"]
